# LangChain-Projects-Beginner

./: .gitignore  pyproject.toml  requirements.txt
AI Contextual Quiz Engine/: app.py  test.py
Automatic_Ticket_Classification/: app.py  utils.py
CSV_Data_Analysis_Tool/: app.py
ChatGpt_Clone_With_Summerization_Option/: app.py
Question_Generator/: app.py
Support Chatbot For Website/: app.py  utils.py
YouTube Script Writing/: app.py  test.py
