[project]
name = "langchain-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "bs4>=0.0.2",
    "ddgs>=9.14.0",
    "faiss-cpu>=1.13.2",
    "fpdf>=1.7.2",
    "langchain>=1.2.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.25",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.0",
    "streamlit>=1.56.0",
    "streamlit-chat>=0.1.1",
    "tabulate>=0.10.0",
]
